welcome.lessons.welcome.bat.bool1.Diff21.scala.error
diff21:2: error: not found: value m
  m=n-21
  ^diff21:4: error: not found: value m
    return 2*Math.abs(m)
                      ^diff21:6: error: not found: value m
  } else { return Math.abs(m)}} 
                           ^